# dotfiles

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .projections.json  CMakeLists.txt  Changes  JSON.sh  LICENSE  Makefile  Makefile.mduem  Package  README  README.asc  README.markdown  README.md  README.mdwn  README.mkdn  README.rst  ToDo  XCompose  Xdefaults  adenosinerc.yml  bash-tap  bash-tap-bootstrap  bash-tap-mock  cpan.sh  crontab  curlrc  dbic.json  disable.conf  editorconfig  emacs  env  eval  export.sh  export.win32.sh  frew-srv  gitconfig  gitignore_global  (+69 more)
.fvwm/: .FvwmConsole-History  .cfg-cache.pl  .fvwm2rc  basicfunctions  config  example.fvwm2rc  fvwmTaskbar  fvwmrc.backup  keys  menu  mouse  osdfunc  playerfunctions  progfunctions  run-dialogue.bash-init  strokage  stylin  themes-rc  themes-rc-2  themes-rc-3
autoload/: projectionist.vim
awesome/: manage_log.lua  rc.lua  ring_buffer.lua  sharetags.lua  volume.lua  widgets.lua
cli/: CMakeLists.txt  cli.in
doc/: bash+.md  lost.txt  matchmaker.txt  projectionist.txt  regedit.txt  test-simple.asc  test-simple.bash.1  test-simple.bash.asc  textobj-between.txt
dotjs/: 192.168.1.1.js  fogbugz.com.js  home.nest.com.js  matrix.cpantesters.org.js  search.cpan.org.js  songza.com.js  tor.com.js  www.cpantesters.org.js
dzil/: config.ini
filetree/: CMakeLists.txt  parent_directory.in
freedesktop/: menu.lua  utils.lua
fruperl/: modules
glob/: CMakeLists.txt  braces.in  brackets.in  star.in
irssi/: .gitignore  artificial-soul.theme  c0ders.theme  config  dbm.theme  design.theme  doom.theme  elite.theme  elpi.theme  envy.theme  evowhite.theme  greenbox.theme  greenedge.theme  greyed-out.theme  hrncek.theme  initrd.theme  insane.theme  japsu.theme  kurja-round.theme  lenten.theme  lighty.theme  liszt.theme  lt.theme  mithru.theme  more_readable.theme  mork.theme  mosdef.theme  murf.theme  n.theme  nitz.theme  oscar.theme  pandemonium.theme  parenthetical.theme  pikkuh.theme  purplechat.theme  pyhy.theme  rain.theme  redhead.theme  revolutionaryv2.theme  rolle.theme  (+13 more)
lib/: bash+.bash  bpan.bash  test-simple.bash
mutt/: imap  personal  pgp  zr
note/: todo
parser/: CMakeLists.txt  whitespace.in
plugin/: lost.vim  matchmaker.vim  quick_scope.vim  regedit.vim
pm/: 70iwlwifi  71bitlbee  72ssh
properties/: CMakeLists.txt  lowercase_values.in
services/: frew-srv  srv
sharetags/: init.lua
ssh/: authorized_keys  config
taffybar/: taffybar.hs
templates/: linux.editorconfig
test/: all.input  bail_out.t  base.t  basics.t  build.input  clean-generated.expected  clean-generated.input  clean-junks.input  default-target.expected  default-target.input  doc.t  done.t  fail.t  fail_fast.t  fcopy.t  fetch-deps.expected  fetch-deps.input  functions.t  helper.bash  install-filter.expected  install-filter.input  install-generated.expected  install-generated.input  install-post-vim.expected  install-post-vim.input  install-post.expected  install-post.input  is.t  more.bash  (+22 more)
(+244 files in other folders)
